Fixed text being too low

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -116,7 +116,7 @@ p {
 }
 
 .balance-content > div > p {
-	margin-top: 2rem;
+	margin-top: 1rem;
 }
 
 .balance-content > div > div:not(:first-child) {
